Used a custom AgreementType.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -10,3 +10,5 @@ services:
             - {name: doctrine.repository_service}
     IDCI\Bundle\AgreementBundle\Handler\:
         resource: '../../Handler'
+    IDCI\Bundle\AgreementBundle\Form\:
+        resource: '../../Form'
